# r2lab.inria.fr

./: .gitignore  DEVELOP.md  Makefile  README.md  nepi-ng-index.html  pyproject.toml  requirements.txt
django/: .gitignore  pyproject.toml
django/assets/altair/: altair-config-day.json  altair-config-slice.json  altair-config-week.json
django/assets/code/: A1.out  A2.out  A3.out  A4.out  A5.out  B1.out  B2.out  B3.out  B4.out  B5.out  C1.out  C2.out  C3.out  C3bis.out  D1.out  D2.out  D3.out  D4.out
django/assets/css/: jquery-ui-custom-1.12.1.min.css
django/code/: .gitignore  A1-ping.py  A2-ping.py  A3-ping.py  A4-ping.py  A5-ping.py  B1-wireless.py  B2-wireless.py  B3-wireless.py  B4-wireless.py  B5-wireless.py  C1-files.py  C2-files.py  C3-files.py  C3bis-files.py  D1-prep.py  D2-prep.py  D3-prep.py  D4-prep.py  Makefile  multi-ping.py
django/markdown/: README-OAICI.md  admin.md  book.md  hardware.md  iframe-liveleases.md  iframe-livemap.md  iframe.md  map.md  news.md  overview.md  papers.md  school.md  signup.md  status.md  tuto-010-registration.md  tuto-020-shell-tools.md  tuto-025-graphic-sessions.md  tuto-030-nepi-ng-install.md  tuto-040-A-ping.md  tuto-060-C-files.md  tuto-070-D-prep.md  tuto-110-troubleshooting.md  tuto-130-5g.md  tuto-140-faq.md  tutorial.md
django/md/: apps.py  views.py
django/r2lab/: apiproxy.py  authviews.py  logger.py  r2labapiauthbackend.py  r2labapiclient.py  settings.py  urls.py  views.py
django/relays/: views.py
django/stats/: .gitignore  make_altair_configs.py  models.py  views.py
django/temperatures/: .gitignore
(+212 files in other folders)
