[project]
name = "r2lab-inria-fr"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "django>=6.0.2",
    "gunicorn>=25.1.0",
    "markdown2>=2.5.4",
    "pyparsing>=3.3.2",
    "rhubarbe>=8.2.2",
    "websockets>=16.0",
]
